--- a/.github/workflows/release-yaml.yml
+++ b/.github/workflows/release-yaml.yml
@@ -31,6 +31,9 @@ jobs:
           RUN_ONCE: "1"
           REPO_DIR: ${{ github.workspace }}
           PY: python3
+          JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
+          JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
+          JIRA_SERVER_URL: ${{ secrets.JIRA_SERVER_URL }}
         run: bash scripts/run_get_issues.sh
 
       - name: Normalize YAML path
